# uniprot-insights

./: .gitignore  404.html  AGENTS.md  README.md  index.html  mkdocs.yml  pyproject.toml  search.html  sitemap.xml
.github/workflows/: ci.yml  docs.yml
api/: index.html
development/: index.html
docs/: api.md  development.md  index.md  rules.md  usage.md
rules/: index.html
search/: search_index.json
src/uniprot_insights/: __init__.py  api.py  cache.py  classifier.py  cli.py  client.py  exceptions.py  extractors.py  models.py  rules.py
src/uniprot_insights/data/: default_rules.yaml
tests/: test_api.py  test_classifier.py  test_client.py  test_extractors.py
tests/fixtures/: alpha_beta_gliadin.json  ambiguous_prolamin.json  lmw_glutenin.json  non_supported_gliadin.json  omega5_gliadin.json  prolamin_unspecified.json
tests/integration/: test_cli.py  test_live.py  test_pipeline.py  test_rules_runtime.py
usage/: index.html
