[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "uniprot-insights"
version = "0.1.0"
description = "UniProt annotation extraction and subgroup classification utilities"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.27",
    "typer>=0.12",
    "PyYAML>=6.0.1",
    "pydantic>=2.0"
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "pytest-httpx>=0.35",
    "pytest-mock>=3.14"
]

[project.scripts]
uniprot-insights = "uniprot_insights.cli:app"

[project.urls]
homepage = "https://example.com/uniprot-insights"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
uniprot_insights = ["data/*.yaml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["-q"]
markers = [
  "integration: integration tests",
  "live: tests requiring external service",
]
